--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -1,3 +1,16 @@
+.bg-contact{
+    background: radial-gradient(44.9% 44.26% at 50% 49.94%, rgba(16, 19, 36, 0.3) 0%, rgba(16, 19, 36, 0.6) 32.81%, rgba(16, 19, 36, 0.95) 100%), url(../../media/images/contact-us.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: toRem(586) !important;
+    z-index: -1;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+}
+
 .bg-main{
     position: absolute;
     left: 0;
@@ -227,19 +240,21 @@
             }
     
             .login-btn{
-                display: flex;
-                align-items: center;
-                justify-content: center;
                 width: toRem(222);
     
                 @include respond (tablet) {
                     display: none;
+                    position: absolute;
+                    left: 50%;
+                    bottom: -350%;
+                    transform: translate(-50%, -50%);
                     z-index: 100;
                     border-radius: 5px;
-                    width: toRem(160);
+                    width: min-content;
                 }
     
                 a{
+                    display: block;
                     font-family: "gilroy";
                     font-weight: 800;
                     font-size: toRem(18);
@@ -247,13 +262,9 @@
                     text-align: center;
                     text-transform: uppercase;
                     color: $color-5;
+                    width: 100%;
                     text-decoration: none;
                     background-color: $primary;
-                    width: 100%;
-                    height: 100%;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
                     padding: 2.4rem toRem(56);
                     transition: all .4s ease-out;
 
@@ -262,7 +273,7 @@
                     }
     
                     @include respond (tablet) {
-                        margin-left: -6.2rem;
+                        width: auto;
                     }
                 }
             }
