--- a/src/assets/scss/layouts/_news.scss
+++ b/src/assets/scss/layouts/_news.scss
@@ -6,6 +6,9 @@
         padding: 0 toRem(24);
     }
 
+    a{
+        text-decoration: none;
+    }
     h2{
         text-align: center;
         font-family: 'Gilroy';
@@ -17,6 +20,8 @@
         border-bottom: 1px solid rgba(255, 255, 255, 0.13);
         padding-bottom: toRem(48);
         margin-bottom: toRem(72);
+        
+        cursor: pointer;
     }
 
     .container{
